--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ember-catcher-fe",
+  "name": "embercatcher-fe",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for ember-catcher-fe goes here",
+  "description": "Small description for embercatcher-fe goes here",
   "repository": "",
   "license": "MIT",
   "author": "",
@@ -19,9 +19,10 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^1.1.0",
+    "@ember/render-modifiers": "^1.0.2",
     "@fullhuman/postcss-purgecss": "^2.0.6",
     "@glimmer/component": "^1.0.0",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^8.0.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.5.3",
     "ember-cli": "~3.15.2",
@@ -36,6 +37,7 @@
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
     "ember-data": "~3.15.0",
+    "ember-decorators": "^6.1.1",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^7.0.0",
     "ember-load-initializers": "^2.1.1",
@@ -45,7 +47,10 @@
     "ember-source": "~3.15.0",
     "eslint-plugin-ember": "^7.7.1",
     "eslint-plugin-node": "^10.0.0",
+    "express": "^4.8.5",
+    "glob": "^4.0.5",
     "loader.js": "^4.7.0",
+    "morgan": "^1.3.2",
     "postcss-import": "^12.0.1",
     "qunit-dom": "^0.9.2",
     "tailwindcss": "^1.2.0"
